...
import com.android.gatherly.ui.theme.theme_leaderboard_gold
import com.android.gatherly.ui.theme.theme_leaderboard_silver
import com.android.gatherly.utils.profilePicturePainter
import java.util.Locale

object FocusTimerScreenTestTags {
  const val HOURS_TEXT = "HOURS_TEXT"
  const val MINUTES_TEXT = "MINUTES_TEXT"
  const val SECONDS_TEXT = "SECONDS_TEXT"
  const val START_BUTTON = "START_BUTTON"
  const val RESET_BUTTON = "RESET_BUTTON"
  const val PAUSE_BUTTON = "PAUSE_BUTTON"
  const val RESUME_BUTTON = "RESUME_BUTTON"
  const val STOP_BUTTON = "STOP_BUTTON"
  const val TODO_TO_CHOOSE = "TODO_TO_CHOOSE"
  const val LINKED_TODO = "LINKED_TODO"
  const val TIMER_TIME = "TIMER_TIME"
  const val TIMER_CIRCLE = "TIMER_CIRCLE"
  const val TIMER_SELECT = "TIMER_SELECT"
  const val LEADERBOARD_SELECT = "LEADERBOARD_SELECT"
  const val LEADERBOARD_LIST = "LEADERBOARD_LIST"
  const val HISTORY_SELECT = "HISTORY_SELECT"
  const val HISTORY_LIST = "HISTORY_LIST"
  const val EMPTY_HISTORY_LIST_MSG = "EMPTY_HISTORY_LIST_MSG"

  /**
   * Returns a unique test tag for the duration associated with a given [FocusSession] item.
   *
   * @param focusSessionId The id of the focus session whose test tag will be generated.
   * @return A string uniquely identifying the duration text of the given [FocusSession].
...
