...
import com.android.gatherly.ui.navigation.NavigationTestTags
import com.android.gatherly.ui.navigation.Tab
import com.android.gatherly.ui.navigation.TopNavigationMenu_Goback
import com.android.gatherly.utils.profilePicturePainter

object FriendsScreenTestTags {
  const val BUTTON_FIND_FRIENDS = "buttonFindFriends"
  const val SEARCH_FRIENDS_BAR = "searchBarFriends"
  const val EMPTY_LIST_MSG = "messageEmptyList"
  const val LOADING_ANIMATION = "loadingAnimation"
  const val HEART_BREAK_ANIMATION = "heartBreakAnimation"
  const val UNFRIENDING_TEXT_ANIMATION = "unfriendingTextAnimation"
  const val FRIENDS_SECTION_TITLE = "friendsSectionTitle"
  const val PENDING_SECTION_TITLE = "pendingSectionTitle"
  const val FRIENDS_LIST = "friendsList"

  /**
   * Returns a unique test tag for the card or container representing a given [Profile.username]
   * item.
   *
   * @param friend The [Profile.username] item of a chosen friend whose test tag will be generated.
...
